--- a/config.json
+++ b/config.json
@@ -5,21 +5,30 @@
   },
   "default_seek_step": 0.5,
   "key_mappings": {
-    "seek_forward": "KEY_VOLUMEUP",
-    "seek_backward": "KEY_VOLUMEDOWN",
-    "toggle_pause": "KEY_PLAYPAUSE",
-    "decrease_seek_step": "KEY_1",
-    "increase_seek_step": "KEY_2",
-    "set_marker": "KEY_3",
-    "play_marker": "KEY_4",
-    "nav_up": "KEY_VOLUMEDOWN",
-    "nav_down": "KEY_VOLUMEUP",
-    "nav_select": "KEY_PLAYPAUSE"
+    "seek_forward": "knob_device.KEY_VOLUMEUP",
+    "seek_backward": "knob_device.KEY_VOLUMEDOWN",
+    "toggle_pause": "knob_device.KEY_PLAYPAUSE",
+    "decrease_seek_step": "buttons_device.KEY_1",
+    "increase_seek_step": "buttons_device.KEY_2",
+    "set_marker_1": "buttons_device.KEY_3",
+    "play_marker_1": "buttons_device.KEY_4",
+    "set_marker_2": "buttons_device.KEY_5",
+    "play_marker_2": "buttons_device.KEY_6",
+    "set_marker_3": "buttons_device.KEY_7",
+    "play_marker_3": "buttons_device.KEY_8",
+    "set_marker_4": "buttons_device.KEY_9",
+    "play_marker_4": "buttons_device.KEY_0",
+    "nav_up": "knob_device.KEY_VOLUMEDOWN",
+    "nav_down": "knob_device.KEY_VOLUMEUP",
+    "nav_select": "knob_device.KEY_PLAYPAUSE",
+    "nav_quit": "buttons_device.KEY_1"
   },
   "filem_ext_filters": "AVI,avi,mp4",
   "filem_show_hidden": "False",
   "filem_start_path": "/",
   "mpv_full_screen": "True",
   "mpv_fs_screen": "0",
-  "mpv_socket": "/tmp/mpv-socket"
+  "mpv_socket": "/tmp/mpv-socket",
+  "marker_persistence": "True",
+  "marker_storage_folder": "./markers"
 }
